@@ -2,6 +2,8 @@ Changes with Apache 1.1b4:
 
   *) r->bytes_sent variable restored
 
+  *) Previously broken multi-method <Limit> parsing fixed.
+
   *) More possibly unsecure programs removed from the support directory.
 
   *) More mod_auth_msql authentication improvements.
